Profile.swift - changed "list' to be get-only
Radio.swift - changed _filterCwAutoLevel, _filterVoiceAutoLevel, _filterDigitalAutoLevel from Int to Bool
Radio.swift - changed _filter--AutoLevel to _filter--AutoEnabled
RadioCommands.swift - changed filter--AutoLevel to filter--AutoEnabled
Radio.swift - corrected parseFilterProperties(_:), removed -- = false from .level case

v2.1.1

Panadapter.swift - commented out xPixel & yPixel code in parseProperties(_:)
Meter.swift - corrected log message in streamHandler(_:)
SliceCommands.swift - corrected error in "@objc dynamic public var audioPan: Int"
Radio.swift - refactored vitaParser(_:) to eliminate unwrapped optional error on shutdown
transmit.swift - removed txFilterHighLimits(txFilterLow, newValue) from _txFilterHigh
transmit.swift - removed txFilterLowLimits(newValue, txFilterHigh) from _txFilterLow
ProfileCommands.swift - modified save & delete methods to allow String tokens

v2.1.0

refactored the Api state machine, eliminated setConnectionState()
UdpManager.swift - commented out "ping" code in register(clientHandle:)
Panadapter.swift - renamed streamActive to isStreaming
Waterfall.swift - renamed streamActive to isStreaming
Opus.swift - added public var isStreaming
Panadapter.swift - added detection of out-of-sequence packets
Waterfall.swift - added detection of out-of-sequence packets
Meter.swift - in parseProperties(_:) added '&& number != "" && units != ""' to if !_initialized
TcpManager.swift - correction to connect(radioParameters:isWan:)
Api.swift - in tcpState(connected:host:port:error:) added guard for udp.bind success
Api.swift - corrections to shutdown / disconnect processing
UdpManager.swift - in bind(radioParameters:isWan:clientHandle:) added Bool return value

v2.0.6

WanServer.swift - changed hostName & hostPort to constants
WanServer.swift - reworked log messages and comments
Radio.swift - commented out code in defaultReplyHandler(_:seqNum:responseValue:reply:) until v2.4.9 bugs fixed