@@ -12,6 +12,10 @@ Radio.swift - changed _filterCwAutoLevel, _filterVoiceAutoLevel, _filterDigitalA
 Radio.swift - changed _filter--AutoLevel to _filter--AutoEnabled
 RadioCommands.swift - changed filter--AutoLevel to filter--AutoEnabled
 Radio.swift - corrected parseFilterProperties(_:), removed -- = false from .level case
+RadioCommands.swift - added class calibrate(callback:)
+Radio.swift - changed _startOffset to _startCalibration
+RadioCommands.swift - changed startOffset to startCalibration
+Radio.swift - changed _calFreq to be in Hz (not MHz)
 
 v2.1.1
 
